cargo-features = ["profile-rustflags"]
[workspace]
resolver = "2"
members = [
	"build-utils",
    "kernel",
    "macros",
    "utils"
]

[profile.release]
panic = "abort"
rustflags = [
    "-Zexport-executable-symbols"
]

[profile.dev]
rustflags = [
    "-Zexport-executable-symbols",
    "-Cforce-frame-pointers=yes"
]
