[package]
name = "config"
version = "0.1.0"
authors = ["llenotre <llenotre@student.42.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.59"

[dependencies.crossterm]
version = "0.19.0"
features = ["event-stream"]
