cargo-features = ["profile-rustflags"]

[package]
name = "maestro"
version = "0.1.0"
authors = ["llenotre <llenotre@student.42.fr>"]
edition = "2021"
build = "build/main.rs"

# The kernel is implemented as a shared library in order to make it accessible from kernel modules
[lib]
name = "kernel"
path = "src/kernel.rs"
crate-type = ["rlib", "dylib"]

# Export the kernel as executable
[[bin]]
name = "maestro"
path = "src/bin.rs"

[dependencies]
macros = { path = "../macros" }
utils = { path = "../utils" }

[build-dependencies]
cc = { version = "1.0.98", features = ["parallel"] }
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8.13"

[features]
default = []
memtrace = []
strace = ["macros/strace"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
	"cfg(config_debug_storage_test)",
	"cfg(config_debug_qemu)",
	"cfg(config_debug_malloc_magic)",
	"cfg(config_debug_malloc_check)"
] }

[profile.release]
panic = "abort"
rustflags = [
    "-Zexport-executable-symbols"
]

[profile.dev]
rustflags = [
    "-Zexport-executable-symbols",
    "-Cforce-frame-pointers=yes"
]
