cargo-features = ["profile-rustflags"]

[package]
name = "ps2"
version = "0.1.0"
authors = ["llenotre <llenotre@student.42.fr>"]
edition = "2024"

[lib]
path = "src/mod.rs"
crate-type = ["dylib"]

[dependencies]

[profile.release]
panic = "abort"

[profile.dev]
rustflags = [
	"-Cforce-frame-pointers=yes"
]
